@@ -45,7 +45,7 @@
 #pragma config OSC = HSPLL
 #pragma config BOREN = BOACTIVE
 #pragma config STVREN = ON
-#pragma config BORV = 3
+#pragma config BORV = 0			// 4.6V
 #pragma config LVP = ON
 #pragma config CPB = ON
 #pragma config BBSIZ = 2048
@@ -65,7 +65,7 @@
 #pragma config PWRT = ON
 #pragma config BOREN = BOACTIVE
 #pragma config STVREN = ON
-#pragma config BORV = 3
+#pragma config BORV = 0			// 4.6V
 #pragma config LVP = OFF
 #pragma config CPB = OFF
 #pragma config WRTD  = OFF
@@ -95,7 +95,7 @@
 // CONFIG2H
 #pragma config WDTPS = 1048576  // Watchdog prescaler
 #pragma config BOREN = SBORDIS  // Brown out enabled
-#pragma config BORV  = 1        // 2.7V
+#pragma config BORV  = 0        // 3V
 
 // CONFIG3H
 #pragma config CANMX = PORTB    // ECAN TX and RX pins are located on RB2 and RB3, respectively.
@@ -575,9 +575,9 @@ void init()
     // RA1/AN1  - channel 8
     // RA2/AN2  - channel 7
     // RA3/AN3  - output
-    // RA4      - output
+    // RA4 input (VCAP for PIC18F26K80))
     // RA5/AN4  - output
-    TRISA = 0b00000000;
+    TRISA = 0b00010000;
     PORTA = 0x00;  // Default off
 
     // PortB
