@@ -2,6 +2,8 @@
 Beijing I/O module
 ==================
 
+2016-04-19 AKHE - RA4 set to input to prevent collision with VCAP circuits in
+                  PIC18F2580. Brown out raised to maximum (3V & 4.6V). Valuable                    input from Anders Forsgren, AJE Electronics AB.
 2016-04-11 AKHE - vscp_getMatrixInfo nw use the pointer supplied by the framework.
 2016-04-04 AKHE - Changed value of C14 to 10uF
 2016-03-23 AKHE - Version 1.1.5------------------------------------------------
